src/test/ui/reachable/unreachable-variant.stderr
error[E0603]: module `super_sekrit` is private
  --> $DIR/unreachable-variant.rs:6:21
   |
LL |     let _x = other::super_sekrit::sooper_sekrit::baz;
   |                     ^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0603`.
